Processing all leguminous species

--- a/Data science/PhytoProm 2.0/Pré-processamento - parte 2.ipynb
+++ b/Data science/PhytoProm 2.0/Pré-processamento - parte 2.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2702,7 +2702,7 @@
     "def save_to_csv(searchLog, specie, part):\n",
     "    searchLog.to_csv(path_or_buf='Logs/{} genome Log - part {}.csv'.format(specie, part),\n",
     "          sep=',', header=True, index=False, mode='w',\n",
-    "         columns=['gene', 'id', 'name', 'family_id', 'motifs', 'reverseComplement', 'upstream', 'downstream', 'mean', 'sum'])"
+    "         columns=['promoter_id', 'tf', 'name', 'family_id', 'motifs', 'reverseComplement', 'upstream', 'downstream', 'mean', 'sum'])"
    ]
   },
   {
@@ -2713,7 +2713,7 @@
    "source": [
     "def ecrMiner (promoter, ecr, specie):\n",
     "    searchLog = ecr.filter(['id', 'name', 'family_id', 'motifs', 'reverseComplement'], axis=1)\n",
-    "    searchLog['gene'] = ''\n",
+    "    searchLog['promoter_id'] = ''\n",
     "    searchLog['upstream'] = 0\n",
     "    searchLog['downstream'] = 0\n",
     "    searchLog['mean'] = 0\n",
@@ -2730,8 +2730,8 @@
     "            hits = len(positivo+negativo)\n",
     "            if hits > 0:\n",
     "                mean = sum(positivo+negativo)/hits\n",
-    "                searchLog = searchLog.append ({'gene':prom.locus, \n",
-    "                                               'id':motivo.id,\n",
+    "                searchLog = searchLog.append ({'promoter_id':prom.locus, \n",
+    "                                               'tf':motivo.id,\n",
     "                                               'name':motivo.name,\n",
     "                                               'family':motivo.family_id,\n",
     "                                               'motifs':motivo.motifs,\n",
@@ -2761,99 +2761,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start 00:13 12/02/2020\n",
+      "Start 20:01 01/03/2020\n",
       "Processando Glycine max\n",
-      "parte 2 - 01:24 12/02/2020\n",
-      "parte 3 - 02:31 12/02/2020\n",
-      "parte 4 - 03:38 12/02/2020\n",
-      "parte 5 - 04:46 12/02/2020\n",
-      "parte 6 - 05:53 12/02/2020\n",
-      "parte 7 - 07:00 12/02/2020\n",
-      "parte 8 - 08:07 12/02/2020\n",
-      "parte 9 - 09:15 12/02/2020\n",
-      "parte 10 - 10:22 12/02/2020\n",
-      "Processando Vigna unguiculata\n",
-      "parte 2 - 12:21 12/02/2020\n",
-      "parte 3 - 13:27 12/02/2020\n",
-      "parte 4 - 14:33 12/02/2020\n",
-      "parte 5 - 15:40 12/02/2020\n",
-      "parte 6 - 16:47 12/02/2020\n",
-      "Processando Vitis vinifera\n",
-      "parte 2 - 18:10 12/02/2020\n",
-      "parte 3 - 19:18 12/02/2020\n",
-      "parte 4 - 20:26 12/02/2020\n",
-      "parte 5 - 21:37 12/02/2020\n",
-      "Processando Phaseolus vulgaris\n",
-      "parte 2 - 23:09 12/02/2020\n",
-      "parte 3 - 00:15 13/02/2020\n",
-      "parte 4 - 01:21 13/02/2020\n",
-      "parte 5 - 02:28 13/02/2020\n",
-      "Processando Medicago truncatula\n",
-      "parte 2 - 04:34 13/02/2020\n",
-      "parte 3 - 05:42 13/02/2020\n",
-      "parte 4 - 06:50 13/02/2020\n",
-      "parte 5 - 07:58 13/02/2020\n",
-      "parte 6 - 09:06 13/02/2020\n",
-      "parte 7 - 10:15 13/02/2020\n",
-      "parte 8 - 11:25 13/02/2020\n",
-      "parte 9 - 12:35 13/02/2020\n",
-      "Processando Trifolium pratense\n",
-      "parte 2 - 14:12 13/02/2020\n",
-      "parte 3 - 15:21 13/02/2020\n",
-      "parte 4 - 16:31 13/02/2020\n",
-      "parte 5 - 17:41 13/02/2020\n",
-      "Processando Arabidopsis thaliana\n",
-      "parte 2 - 19:55 13/02/2020\n",
-      "parte 3 - 21:03 13/02/2020\n",
-      "parte 4 - 22:11 13/02/2020\n",
-      "parte 5 - 23:20 13/02/2020\n",
-      "parte 6 - 00:30 14/02/2020\n",
-      "parte 7 - 01:38 14/02/2020\n",
-      "parte 8 - 02:47 14/02/2020\n",
-      "parte 9 - 03:56 14/02/2020\n",
-      "parte 10 - 05:04 14/02/2020\n",
-      "Processando Ricinus communis\n",
-      "parte 2 - 06:34 14/02/2020\n",
-      "parte 3 - 07:45 14/02/2020\n",
-      "parte 4 - 08:54 14/02/2020\n",
-      "parte 5 - 10:03 14/02/2020\n",
-      "Processando Oryza sativa\n",
-      "parte 2 - 11:13 14/02/2020\n",
-      "parte 3 - 12:17 14/02/2020\n",
-      "parte 4 - 13:21 14/02/2020\n",
-      "parte 5 - 14:25 14/02/2020\n",
-      "parte 6 - 15:29 14/02/2020\n",
-      "parte 7 - 16:35 14/02/2020\n",
-      "parte 8 - 17:41 14/02/2020\n",
-      "Processando Zea mays\n",
-      "parte 2 - 19:53 14/02/2020\n",
-      "parte 3 - 21:03 14/02/2020\n",
-      "parte 4 - 22:12 14/02/2020\n",
-      "parte 5 - 23:22 14/02/2020\n",
-      "parte 6 - 00:31 15/02/2020\n",
-      "parte 7 - 01:43 15/02/2020\n",
-      "parte 8 - 02:54 15/02/2020\n",
-      "parte 9 - 04:05 15/02/2020\n",
-      "parte 10 - 05:16 15/02/2020\n",
-      "Processando Physcomitrella patens\n",
-      "parte 2 - 07:35 15/02/2020\n",
-      "parte 3 - 08:46 15/02/2020\n",
-      "parte 4 - 09:58 15/02/2020\n",
-      "parte 5 - 11:10 15/02/2020\n",
-      "Processando Hordeum vulgare\n",
-      "parte 2 - 13:27 15/02/2020\n",
-      "parte 3 - 14:36 15/02/2020\n",
-      "parte 4 - 15:45 15/02/2020\n",
-      "parte 5 - 16:57 15/02/2020\n",
-      "parte 6 - 18:05 15/02/2020\n",
-      "parte 7 - 19:16 15/02/2020\n",
-      "Processando Manihot esculenta\n",
-      "parte 2 - 20:37 15/02/2020\n",
-      "parte 3 - 21:46 15/02/2020\n",
-      "parte 4 - 22:54 15/02/2020\n",
-      "parte 5 - 00:03 16/02/2020\n",
-      "parte 6 - 01:12 16/02/2020\n",
-      "Ended 01:39 16/02/2020\n"
+      "parte 2 - 20:01 01/03/2020\n",
+      "parte 3 - 20:01 01/03/2020\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-463c18578fbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mgenome\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'size'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0msearchLog\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mecrMiner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenome\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspecie\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0msave_to_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msearchLog\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspecie\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'final'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-18-b1676a3b72ea>\u001b[0m in \u001b[0;36mecrMiner\u001b[0;34m(promoter, ecr, specie)\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmotivo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mecr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitertuples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m             \u001b[0mpositivo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msearchFT\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mprom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpromoter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmotivo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmotifs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0mnegativo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msearchFT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpromoter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmotivo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverseComplement\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m             \u001b[0mhits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpositivo\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mnegativo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-04cef856c741>\u001b[0m in \u001b[0;36msearchFT\u001b[0;34m(promotor, tamanho, motivo)\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0;32mwhile\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtamanho\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtam\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m         \u001b[0maminoacido\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmotivo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpromotor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdegeneracao\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maminoacido\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
